assets/sass/local.scss
.govuk-main-wrapper {
  min-height: 600px;
}

.bapv-table th, .bapv-table td  {
  padding: govuk-spacing(4) govuk-spacing(4) govuk-spacing(4) 0;
}

.bapv-table_cell--nowrap {
  white-space: nowrap;
}

.bapv-radio-paragraph {
  margin-top: -govuk-spacing(2);
  margin-bottom: 0;
}

.govuk-accordion__section-heading-text-focus {
  @include govuk-font($size: 19, $weight: "bold");
}

.bapv-visit-date-time-filter {
  padding: govuk-spacing(4) govuk-spacing(4) 0;
  background-color: govuk-colour("light-grey");
  margin-bottom: govuk-spacing(4);

  .govuk-button-group {
    align-items: flex-end;
    margin-bottom: 0;

    .govuk-button {
      margin-bottom: 32px;
    }
  }

  .govuk-form-group {
    margin-right: govuk-spacing(6);
  }
}

.bapv-prisoner-event {
  padding: govuk-spacing(2);
  background-color: rgba(86, 148, 202, 0.25);
  @include govuk-font($size: 16, $weight: "normal");
}

.bapv-prisoner-event--top-margin {
  margin-top: 45px;
}

.bapv-booking-search {
  display: flex;
  align-items: center;

  & > span {
    margin-right: govuk-spacing(2);
  }

  .govuk-form-group {
    margin-right: govuk-spacing(2);
    margin-bottom: 0;
  }

  .govuk-button {
    margin-left: govuk-spacing(4);
    margin-bottom: 0;
  }
}

.bapv-booking-search-label {
  margin-bottom: govuk-spacing(3);
}


.bapv-info-panel {
  background-color: govuk-colour("blue");
}

.moj-side-navigation {
  margin-left: -15px;
}

.moj-side-navigation__title {
  color: $govuk-text-colour;
}

.bapv-morning-slots .govuk-form-group,
.bapv-afternoon-slots .govuk-form-group {
  margin-bottom: govuk-spacing(3);
}

.js-enabled .govuk-accordion__section-content {
  padding-bottom: 0;
}

.js-enabled .govuk-accordion__section--expanded .govuk-accordion__section-button,
.js-enabled .govuk-accordion__section-button {
  padding-bottom: 0;
  margin-bottom: 0;
  border-bottom: 0;
}

.bapv-table-no-bottom-border .govuk-table__row:last-child .govuk-table__cell,
.bapv-tabs .govuk-table__row:last-child .govuk-table__cell {
  border-bottom: 0;
}

.bapv-extraspacing {
  line-height: 1.5;
}

.bapv-date-time-information span {
  padding-right: govuk-spacing(6);
}

.bapv-sub-navigation {
  box-shadow: inset 0 -1px 0 govuk-colour("mid-grey");
  display: flex;

  & > ul {
    flex: 3;
  }

  & > div {
    flex: 1;
    text-align: right;
  }
}

.bapv-another-date {
  position: relative;
}

.bapv-another-date__toggle {
  button {
    @include govuk-font($size: 19, $weight: "normal");
    border: 0;
    background-color: transparent;
    color: govuk-colour("blue");
    padding: 12px 0;

    & svg {
      margin-top: -8px;
      display: inline-block;
      height: govuk-spacing(6);
      margin-left: govuk-spacing(2);
      vertical-align: middle;
      width: govuk-spacing(6);
      fill: currentColor;
    }

    &:focus {
      background-color: govuk-colour("yellow");
      color: govuk-colour("black");
      outline: none;
      box-shadow: 0 -4px 0 govuk-colour("black") inset;
    }
  }
}

.bapv-another-date__form {
  text-align: left;
  position: absolute;
  max-width: 345px;
  right: 0;
  top: 49px;
  width: 345px;
  background-color: $govuk-body-background-colour;
  z-index: 10;
  background-color: govuk-colour("light-grey");
  padding: govuk-spacing(3);

  form {
    display: flex;

    & > div {
      flex: 5;
    }

    & > button {
      align-self: flex-end;
    }
  }

  .govuk-button {
    margin-bottom: 2px;
  }

  .govuk-form-group {
    margin-bottom: 0;
  }
}

.bapv-force-overflow {
 overflow-wrap: anywhere;
 white-space: pre-line;
}

.bapv-timetable-dates {
  display: flex;
  justify-content: space-between;
  max-width: 600px;
  margin-top: govuk-spacing(4);
}

.bapv-timetable-dates__date {
  flex-basis: 10%;
  padding: govuk-spacing(2);
  text-align: center;

  & span {
    display: block;
    padding-bottom: govuk-spacing(2);
    @include govuk-font($size: 19);
  }

  & a {
    @include govuk-font($size: 24);
  }

  & a:hover {
    text-decoration: none;
  }
}

.bapv-timetable-dates__date--selected {
  background-color: govuk-colour("blue");
  color: govuk-colour("white");
  @include govuk-font($size: 24, $weight: "bold");
}

.bapv-nowrap {
  white-space: nowrap;
}

.bapv-link-button, .bapv-link-button:active, .bapv-link-button:hover {
  background: none;
  box-shadow: none;
  color: $govuk-link-colour;
  margin: 0;
  padding: 0;
  top: unset;
  text-align: left;
  @include govuk-link-common;
  @include govuk-link-style-default;
}

.env--STAGING [data-qa=connect-dps-common-environment-tag] {
  padding-left: 0;
  visibility: hidden;

  &::before {
    content: "STAGING";
    visibility: visible;
    @extend .govuk-tag;
    @extend .govuk-tag--orange;
  }
}

// fix colour on MoJ sortable table for non-sortable headings
[data-module=moj-sortable-table] th {
  color: #005ea5;
}

.fix-width-alert-restriction .govuk-table__row {
  th:first-child, th:last-child {
    width: 20%;
  }
}

.bapv-visit-details {
  & dl, & .bapv-visit-details__restriction {
    display: grid;
    grid-template-columns: 22% auto;
    gap: govuk-spacing(2) govuk-spacing(3);
  }

  & dd {
    margin-left: 0;
  }
}

.bapv-visit-details__summary {
  & dl {
    grid-template-columns: max-content auto;
  }

  & li, & dt {
    @include govuk-typography-weight-bold;
  }

  & li {
    @include govuk-font-size($size: 24);
  }
}

.bapv-visit-details__restriction-dates {
  color:  $govuk-secondary-text-colour;
}

.bapv-visit-details {
  & .moj-timeline__title {
    @include govuk-font-size($size: 24);
    margin-right: govuk-spacing(1);
  }

  & .moj-timeline__date {
    @include govuk-font-size($size: 19);
  }
}

